apps/jackett/05.server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett-server
  namespace: jackett
  labels:
    app: jackett-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett-server
  template:
    metadata:
      labels:
        app: jackett-server
    spec:
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          volumeMounts:
          - name: jackett-config
            mountPath: /config
      volumes:
      - name: jackett-config
        persistentVolumeClaim:
          claimName: jackett-config
