apps/jackett/06.server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: jackett
  labels:
    app: jackett
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9117
  selector:
    app: jackett-server
